# Clove

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Clove.sln  Doxyfile  GenProj_Windows_VS2017.bat  GenProj_Windows_VS2019.bat  GenerateProjects.bat  GenerateProjects.sh  Ideas.txt  README.md  avalonianotes.txt  conanfile.txt  linuxnotes.txt  macnotes.txt  premake5.lua  refactor notes.txt  renderingnotes.txt
Bulb/: CMakeLists.txt
Bulb/Bulb.Core/: Application.cpp  Application.hpp  CMakeLists.txt  Component.cpp  Component.hpp  EditorApplication.cpp  EditorApplication.hpp  EditorLayer.cpp  EditorLayer.hpp  EditorSession.cpp  EditorSession.cs  EditorSession.hpp  EditorWindow.cpp  EditorWindow.hpp  EditorWindowProxy.cpp  EditorWindowProxy.hpp  EngineSession.cs  Entity.cpp  Entity.hpp  Layer.cpp  Layer.hpp  Temp.cs  Window.cpp
Bulb/Bulb.CoreUI/: ViewModel.cs
Bulb/Bulb.Desktop/: App.xaml  App.xaml.cs  Bulb.Desktop.csproj  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  ViewLocator.cs
Bulb/Bulb.Desktop.Windows/: App.xaml  App.xaml.cs  CMakeLists.txt  Form1.Designer.cs  Form1.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs
Bulb/Bulb.Desktop.Windows/Properties/: AssemblyInfo.cs
Bulb/Bulb.Desktop/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
Bulb/Bulb.Desktop/Views/: MainWindow.xaml  MainWindow.xaml.cs
Bulb/Bulb.Engine/: BulbApplication.hpp  BulbWindow.cpp  CMakeLists.txt  EngineSession.cs  Wrapper.cpp  Wrapper.hpp
Bulb/Bulb.Engine.Clove/: BulbApplication.cpp  BulbWindow.hpp  CMakeLists.txt  Wrapper.cpp  Wrapper.hpp
Bulb/Bulb.UI/: CMakeLists.txt  Temp.cs  ViewModel.cs
Bulb/Bulb.Windows/: App.xaml  App.xaml.cs  CMakeLists.txt  EditorWindow.xaml  EditorWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TransformComponent3D.xaml  TransformComponent3D.xaml.cs
Bulb/Bulb.Windows/Properties/: Resources.Designer.cs  Settings.Designer.cs
Bulb/Bulb.Windows/UI/: ComponentTemplateSelector.cs  ComponentViewModel.cs  EditorWindowViewModel.cs  EntityItemViewModel.cs  EntityViewModel.cs
Bulb/CloveWrapper/: Application.cpp  Application.hpp  BulbApplication.cpp  BulbApplication.hpp  BulbLayer.cpp  BulbLayer.hpp  BulbWindow.cpp  BulbWindow.hpp  CMakeLists.txt  Entity.cpp  Entity.hpp  Layer.cpp  Layer.hpp  Window.hpp  Wrapper.cpp  Wrapper.hpp
Bulb/Examples/: CMakeLists.txt
Bulb/Examples/PlayingAudio/: CMakeLists.txt  main.cpp
Bulb/Examples/RenderingAudio/: CMakeLists.txt  main.cpp
Bulb/Examples/RotatingCube/: CMakeLists.txt  (+3 more)
Bulb/Scripts/: poisson.py
Bulb/Tools/: CMakeLists.txt
Bulb/src/: CMakeLists.txt  Layer.cpp  LayerStack.cpp  ModelLoader.cpp  TextureLoader.cpp
Clove/: CMakeLists.txt  Clove.vcxproj  Clove.vcxproj.filters  RenderSystem.cpp  RenderSystem.hpp
Clove/Examples/: CMakeLists.txt
Clove/cmake/: CompileShader.cmake  glslHeader.in
Clove/components/: CMakeLists.txt
Clove/src/: CMakeLists.txt  Clove.h  Clove.hpp  Log.cpp  Test.cpp  Test.h  clvpch.cpp  clvpch.h  clvpch.hpp
Editor/CloveWrapper/: CMakeLists.txt  Wrapper.cpp  Wrapper.hpp
Editor/Editor/: CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs
Examples/HelloTriangle/: CMakeLists.txt  PixelShader.hlsl  main.cpp
Root/Definitions/: CMakeLists.txt  README.md
Root/Delegate/: CMakeLists.txt  README.md
Root/Event/: CMakeLists.txt  README.md
Root/Log/: CMakeLists.txt  README.md
Root/Memory/: CMakeLists.txt  README.md
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/CMake/: Info.plist.in
Sandbox/src/: AppDelegate.m  AppDelegate.mm  Application.cpp  ExampleLayer.hpp  ExamplelLayer.cpp  GameLayer.cpp  GameLayer.hpp  SandboxApp.cpp  SandboxApp.mm  TestLayer.cpp  TestLayer.hpp
Scape/: CMakeLists.txt
Scape/Editor/: CMakeLists.txt  EditorApp.xaml  EditorApp.xaml.cs  EditorLogger.cs  MainWindow.xaml  MainWindow.xaml.cs  MainWindowViewModel.cs  Scape.Editor.csproj  ViewModel.cs
Scape/Engine/: Application.cs  Import.cs  README.md  Scape.Engine.csproj
Scape/Membrane/: Application.cpp  Application.hpp  CMakeLists.txt  README.md
Scape/Scape.Editor/: App.xaml  App.xaml.cs  Program.cs  Scape.Editor.csproj  ViewLocator.cs
Scape/Scape.Engine/: Application.cs  Import.cs  Native.cs  OperatingSystem.cs
Scape/Scape.Membrane/: Application.cpp  Application.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  Main.cpp  README.md
Scape/Wrapper/: CMakeLists.txt  README.md
Stem/: App.xaml.cs  CMakeLists.txt  EditorWindow.xaml  EditorWindow.xaml.cs  main.cpp
Stem/source/: Application.cpp  Layer.cpp  LayerStack.cpp  ModelLoader.cpp  SoundFile.cpp  TextureLoader.cpp
Stem/src/: Application.cpp  CMakeLists.txt
Stem/tools/: CMakeLists.txt
Tunic/: CMakeLists.txt
Tunic/Tools/: CMakeLists.txt
Tunic/src/: Application.cpp  CMakeLists.txt  Input.cpp  Layer.cpp  LayerStack.cpp  ModelLoader.cpp
VKBackendTest/: CMakeLists.txt  frag.glsl  main.cpp  vert.glsl
Vulkan/: CMakeLists.txt  refactor notes.txt
Vulkan/source/: frag.glsl  main.cpp  vert.glsl
bulb/: CMakeLists.txt
bulb/components/: CMakeLists.txt
bulb/source/: CollisionShapeComponentViewModel.cs  ComponentViewModel.cs  EditorApp.xaml  EditorApp.xaml.cs  EditorLogger.cs  EditorPropertyHelper.cs  EditorSessionViewModel.cs  EntityViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  MainWindowViewModel.cs  ProjectCreator.cs  RelayCommand.cs  SceneViewModel.cs  SizePercentageConverter.cs  TransformComponentViewModel.cs  Vector3Box.xaml  Vector3Box.xaml.cs  ViewportViewModel.cs
clove/: CMakeLists.txt  README.md
clove/cmake/: CompileShader.cmake  CopyIncludes.cmake
clove/components/: CMakeLists.txt
clove/source/: Application.cpp  Layer.cpp  LayerStack.cpp  ModelLoader.cpp  ReflectionCommon.cpp  SoundFile.cpp  SubSystem.cpp  TextureLoader.cpp  WindowSurface.cpp  WindowViewport.cpp  World.cpp
clove/tests/: AssetPtrTests.cpp  CMakeLists.txt  VirtualFileSystemTests.cpp
clove/tools/: CMakeLists.txt
membrane/: CMakeLists.txt  README.md
membrane/source/: Application.cpp  EditorLayer.cpp  Log.cpp  MessageHandler.cpp  RuntimeLayer.cpp  Scene.cpp  ViewportSurface.cpp
(+2661 files in other folders)
